# unfccc_di_api

./: .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tbump.toml  tox.ini  update_citation_info.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.ipynb  usage.rst
unfccc_di_api/: __init__.py  unfccc_di_api.py
unfccc_di_api/tests/: __init__.py  test_unfccc_di_api.py
