[metadata]
name = unfccc_di_api
version = 3.0.1
author = Mika Pflüger
author_email = mika.pflueger@pik-potsdam.de
description = Python wrapper around the Flexible Query API of the UNFCCC.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/pik-primap/unfccc_di_api
project_urls =
    Documentation = https://unfccc-di-api.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache Software License 2.0
license_file = LICENSE

[options]
packages =
    unfccc_di_api
    unfccc_di_api.tests
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    pandas
    treelib
    requests

[options.extras_require]
test = pytest
dev =
    pip
    wheel
    build
    watchdog
    flake8
    coverage
    Sphinx
    twine
    pytest
    pytest-runner
    pre-commit
    sphinx_rtd_theme
    ipykernel
    nbsphinx
    tbump
    tox

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = E203, W503

[doc8]
max-line-length = 88
